--- a/index.html
+++ b/index.html
@@ -1,20 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asadujjaman Website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gentium+Book+Plus:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <section>
-        <div>
-            <h1>Welcome To <span>Asadujjaman</span> World</h1>
+    <section class="top-banner flexibal-container">
+        <div class="half-width">
+            <h1>Welcome To </h1>
+            <h1><span class="orange-color">Asadujjaman</span> World</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me giving inspiration for career building of frustated people. But nobody pays me
+                singlepanny for that work. That's why I am learning and mastering web development. I will not stop until
+                I become the Web
+                Development Hero.</p>
+            <a class="button" href="https://www.linkedin.com/in/md-asadujjaman-888134138" target="_blank"> HIRE ME </a>
         </div>
-        <div>
-            <img src="images/jhankar.png" alt="">
+        <div class="half-width">
+            <img src="images/My project (6).png" alt="">
         </div>
     </section>
+    <section class="dream-big-bg flexibal-container">
+        <div class="half-width">
+            <img src="images/My project (3).png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
+                howto make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="button" href="https://www.linkedin.com/in/md-asadujjaman-888134138" target="_blank"> DOWNLOAD
+                RESUME </a>
+        </div>
+    </section>
+    <section class="Experiences">
+        <h1>Experiences</h1>
+        <div class="flexibal-container">
+            <div id="full-stack-developer" class="Experiences-item ">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange-color">2023-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="baby-web-developer" class="Experiences-item ">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-color">2022-2023 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>© Md. Asadujjaman 2023, a Web Developer initiative.</p>
+    </footer>
 </body>
+
 </html>
